newclay/test/Compiler/StaticEvaluator/Fail/Redefinition3/main.clay
public define Main;
private define Main;
